--- a/app/views/pages/choose_category.html.erb
+++ b/app/views/pages/choose_category.html.erb
@@ -41,6 +41,7 @@
               </div>
 
               <p>Center your diet around plant foods, with occasional inclusion of meat.</p>
+              <div></div>
             </div>
           </div>
         <% end %>
@@ -61,7 +62,8 @@
                 <h2 class="category-text green"><mark class="diet-mark green"></mark>VEGETARIAN</h2>
               </div>
 
-              <p>Center your diet around plant foods, with occasional inclusion of animal products, except meat and fish.</p>
+              <p>Center your diet around plant foods, <br> with occasional inclusion of animal products, <br> except meat and fish.</p>
+            <div></div>
             </div>
           </div>
         <% end %>
@@ -81,6 +83,7 @@
               </div>
 
               <p>Center your diet around plant foods without animal products.</p>
+            <div></div>
             </div>
           </div>
         <% end %>
