--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -34,7 +34,7 @@
 
 .login-signup-button {
   display: block;
-  width: 325px;
+  width: 100%;
   height: 50px;
   background-color: $green;
   box-sizing: border-box;
