--- a/app/assets/stylesheets/components/_diet-card.scss
+++ b/app/assets/stylesheets/components/_diet-card.scss
@@ -14,13 +14,13 @@
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
   background-color: white;
   position: relative;
-  // margin-top: calc((100vh - 463px) / 2);
 
   .diet-card-title {
     position: relative;
     .category-text {
       position: relative;
       z-index: 2;
+      max-width: 500px;
     }
   }
 }
@@ -71,4 +71,17 @@
 
 .carousel-dot.active {
   background-color: black !important;
+}
+
+@media (min-width: 1200px) {
+
+.diet-card {
+    width: 400px;
+    height: 400px;
+    margin: 20px;
+  }
+
+.diet-card-text {
+  margin-bottom: 25%;
+  }
 }
