--- a/app/assets/stylesheets/components/_recipe-card.scss
+++ b/app/assets/stylesheets/components/_recipe-card.scss
@@ -1,28 +1,28 @@
-  .recipe-card {
-    width: 100%;
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    color: black;
-    border-radius: 25px;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
-    position: relative;
-  }
+.recipe-card {
+  width: 100%;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  color: black;
+  border-radius: 25px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+  position: relative;
+}
 
- .recipe-img-small {
-    width: 100%;
-    height:130px;
-    border-radius: 25px 25px 0 0;
-    background-size: cover;
-    background-position: center;
- }
+.recipe-img-small {
+  width: 100%;
+  height:130px;
+  border-radius: 25px 25px 0 0;
+  background-size: cover;
+  background-position: center;
+}
 
-  .recipe-page {
-    margin-top: 50px;
-  }
+.recipe-page {
+  margin-top: 50px;
+}
 
 .recipe-card-text-small {
   width:100%;
@@ -33,4 +33,34 @@
 .recipe-name-small {
   font-size: 18px;
   font-weight: normal;
+}
+
+
+@media (min-width: 1200px) {
+  .recipe-img-small {
+    width: 100%;
+    height:100%;
+  }
+
+  .recipe-img-large {
+    text-align:center;
+  }
+
+  .recipe-column {
+    grid-column-gap: 80px !important;
+    margin-top: 40px;
+  }
+
+  .recipe-page {
+    max-width: 800px;
+    margin: 50px auto 0 auto;
+  }
+
+  .recipe-info {
+    max-width: 500px;
+  }
+
+  .recipe-card {
+    margin: 40px auto;
+  }
 }
