--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -14,6 +14,16 @@
   z-index: 1000000;
 }
 
+.topbar-desktop {
+  text-align:center;
+  position:sticky;
+  top:10px;
+  height: 60px;
+  width: 100vw;
+  color: black;
+  font-size: 22px;
+}
+
 .topbar-title {
   margin-bottom: 0;
 }
@@ -60,4 +70,21 @@
 .logo {
   height: 40px;
   margin: 0 auto;
+}
+
+@media (min-width: 1200px) {
+  .topbar .chevron, .topbar .b-small-logo {
+    display: none;
+  }
+
+  .topbar-title {
+    margin: 0 auto;
+  }
+
+  html.home-page, html.landing-page, html.new-page {
+    .topbar {
+      display:none;
+    }
+  }
+
 }
