--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,21 +6,11 @@
   text-align:left;
 }
 
-#container-dashboard {
-  background-position: 60% -30px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-top: 0;
-  padding-top: 30px;
-}
-
-
 .cards-button {
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
 }
-
 
 .card-button {
   box-shadow: 0px 4px 10px rgba(68, 68, 68, 0.45);
@@ -75,6 +65,32 @@ a, a:hover {
 
 // Progress ring
 
+.progress-card {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  text-align: center;
+}
+
+.percent {
+  display: flex;
+  width: 150px;
+  text-align: center;
+}
+
+.leaf-icon-dashboard {
+  color: $green;
+  font-size: 40px;
+  position: relative;
+  left: -55%;
+  margin-top: 30%;
+}
+
+.percent-ring {
+  width: 140px;
+  margin: 0 auto;
+}
+
 #ring {
   position: relative;
   width: 140px;
@@ -96,13 +112,6 @@ a, a:hover {
   stroke: #EEEEEE;
 }
 
-.progress-card {
-  display: flex;
-  flex-direction: column;
-  width: 150px;
-  text-align: center;
-}
-
 .number-days {
   font-weight: bold;
   font-size: 20px;
@@ -118,14 +127,22 @@ a, a:hover {
   font-weight: normal;
 }
 
-.leaf-icon-dashboard {
-  color: $green;
-  font-size: 40px;
-  position: absolute;
-  top: 32%;
-  left: 23%;
-}
 
+
+/* Responsive */
+
+@media (min-width: 1200px) {
+  .cards-button {
+    width: 35%;
+    margin: 50px 0;
+  }
+
+  .welcome {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  }
+
+}
 
 
 
