--- a/app/assets/stylesheets/pages/_landingpage.scss
+++ b/app/assets/stylesheets/pages/_landingpage.scss
@@ -3,9 +3,9 @@
   height: 100px;
 }
 
-// Container
 .landing-page-container {
-  margin: 50px;
+  margin: 30px auto 90px auto;
+  padding: 0 25px;
 }
 
 // Banner
@@ -23,59 +23,65 @@
 
 .banner h1 {
   margin: 60px 0 30px 0;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  color: black;
   font-size: 32px;
   font-weight: normal;
   text-align: center;
 }
 
 .signup-btn {
-  color: white;
-  background: $pink;
+  color: $pink;
+  background: rgba(255,255,255, 0.7);
   padding: 8px 24px;
-  border-radius: 50px;
+  border-radius: 12px;
   font-weight: lighter;
   font-size: 20px;
+  border: 2px solid $pink;
+}
+
+a.signup-btn:hover {
+  color: black;
 }
 
 .sign-up {
-  color: white;
+  color: black;
   font-size: 16px;
   margin-top: 16px;
 }
 
 .sign-up a {
-  color: $green;
+  color: $pink;
+  font-weight: bold;
 }
 
 // Content
 .content-section {
-  margin-bottom: 20px;
-  margin-top: 20px;
-  margin-bottom: 130px;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-}
+  box-shadow: 0px 4px 10px rgba(68, 68, 68, 0.45);
+  border-radius: 25px;
 
-.text-section {
-  text-align: center;
-  margin-bottom: 24px;
+  .img-section {
+    margin-top: 20px;}
+
+  .text-section {
+    text-align: center;
+    margin: 15px;
+    padding: 10px;
   h2 {
   font-size: 20px;
   }
 }
-
-.landing-page-img {
-  box-shadow: 0px 4px 10px rgba(68, 68, 68, 0.45);
-  border-radius: 6px;
 }
+
 
 // Footer
 .landing-page-footer {
-  background-color: $pink;
+  background-color: $yellow;
+  opacity: 0.8;
   height: 100px;
   margin-top: -50px;
   display: flex;
@@ -83,6 +89,9 @@
   align-items: center;
   p {
     margin: 0;
+    color: white;
+    font-weight: bold;
+    text-align:center;
   }
 }
 
@@ -91,6 +100,44 @@
   color: white !important;
   transition: 0.3;
   padding: 0 10px;
+}
+
+
+
+/* Responsive */
+
+@media (min-width: 1200px) {
+
+  .landing-page-container {
+  max-width: 700px;
+  margin: 0 auto 90px auto;
+}
+
+  .content-section {
+  display: flex;
+  flex-direction: unset;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  padding: 10px;
+  box-shadow: 0px 4px 10px rgba(68, 68, 68, 0.45);
+  border-radius: 25px;
+
+
+  .img-section {
+    margin-top: 20px;}
+
+  .text-section {
+    text-align: center;
+    margin: 15px;
+    padding: 10px;
+      h2 {
+      font-size: 20px;
+      }
+  }
+
+}
+
 }
 
 
