--- a/app/assets/stylesheets/pages/_recipe_page.scss
+++ b/app/assets/stylesheets/pages/_recipe_page.scss
@@ -13,7 +13,7 @@ h2.recipe-title {
 
 .recipe-info {
   display: flex;
-  margin: 20px 10px;
+  margin: 20px auto;
   justify-content: space-between;
   align-items: center;
 }
