--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<html class="new-page">
 <div class="topbar">
   <%= image_tag("began-logo.png", alt: "Began logo", class: "logo") %>
 </div>
@@ -32,5 +33,6 @@
   <%= render "devise/shared/links" %>
 
 
-  <p style="color: #FA5F5F; text-align: center; font-size: 40px; margin-top: 50px;"><i class="fas fa-seedling"></i></p>
+  <p style="color: #2CCCC3; text-align: center; font-size: 40px; margin-top: 50px;"><i class="fas fa-seedling"></i></p>
 </div>
+</html>
