--- a/app/views/recipes/all.html.erb
+++ b/app/views/recipes/all.html.erb
@@ -20,7 +20,8 @@
   <h2 class="second-title">Delicious ideas.<br>For delicious meals.</h2>
 
   <div class="search-form">
-    <%= form_tag all_recipes_path, class: "form-inline", method: :get do %>
+    <form class="form-inline">
+    <%= form_tag all_recipes_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
         class: "form-control",
@@ -29,6 +30,7 @@
            <i class="fas fa-seedling"></i>
         <% end %>
     <% end %>
+   </form>
   </div>
 
 
