--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,6 +22,7 @@
             <i class="fas fa-play"></i>
           <% end %>
         <% end %>
+        <% end %>
       </li>
 
       <li class="nav-item">
