--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
 
   <div class="icon-navbar">
     <ul>
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <% if current_user.category.nil? %>
           <%= link_to choose_category_path do %>
             <i class="fas fa-play"></i>
@@ -23,7 +23,7 @@
           <% end %>
         <% end %>
         <% end %>
-      </li>
+      </li> -->
 
       <li class="nav-item">
         <%= link_to meat_counter_path  do %>
