fixing the navbar link

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,31 @@
   </div>
 
   <div class="icon-navbar">
-    <ul>
 
       <li class="nav-item">
+
+        <% if current_user.category.nil? %>
+          <%= link_to choose_category_path do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+
+        <% else %>
+        <% if current_user.challenges.empty? %>
+          <%= link_to category_path(current_user.category) do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+        <% else %>
+          <%= link_to category_path(current_user.category, anchor: current_user.challenges.last.position) do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+        <% end %>
+        <% end %>
+
+      </li>
+
+    <ul>
+
+      <li class="nav-item active">
         <%= link_to meat_counter_path  do %>
           <i class="fas fa-calendar"></i>
         <% end %>
