--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
 
   <div class="icon-navbar">
 
-      <div class="nav-item-play">
+      <li class="nav-item-play">
 
         <% if current_user.category.nil? %>
           <%= link_to choose_category_path do %>
@@ -26,7 +26,7 @@
         <% end %>
         <% end %>
 
-      </div>
+      </li>
 
     <ul>
 
