--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,8 +8,26 @@
   <div class="icon-navbar">
 
     <ul>
-
       <li class="nav-item active">
+        <% if current_user.category.nil? %>
+          <%= link_to choose_category_path do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+
+        <% else %>
+        <% if current_user.challenges.empty? %>
+          <%= link_to category_path(current_user.category) do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+        <% else %>
+          <%= link_to category_path(current_user.category, anchor: current_user.challenges.last.position) do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+        <% end %>
+        <% end %>
+      </li>
+
+      <li class="nav-item">
         <%= link_to meat_counter_path  do %>
           <i class="fas fa-calendar"></i>
         <% end %>
@@ -24,7 +42,7 @@
         <i class="fas fa-utensils"></i>
         <% end %>
       </li>
-       <li class="footer-nav-item <%= @forum ? 'active' : '' %> ">
+       <li class="nav-item <%= @forum ? 'active' : '' %> ">
           <%= link_to posts_path do %>
             <i class="fas fa-users"></i>
           <% end %>
