--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,17 +27,17 @@
         <% end %>
       </li>
 
-      <li class="nav-item">
+      <li class="nav-item <%= params[:action] == 'meat_counter' ? 'active' : '' %>">
         <%= link_to meat_counter_path  do %>
           <i class="fas fa-calendar"></i>
         <% end %>
       </li>
-      <li class="nav-item">
+      <li class="nav-item <%= params[:action] == 'cookbook' ? 'active' : '' %>">
         <%= link_to cookbook_path do %>
         <i class="fas fa-utensil-spoon"></i>
         <% end %>
       </li>
-      <li class="nav-item">
+      <li class="nav-item <%= params[:action] == 'all_recipes' ? 'active' : '' %>">
         <%= link_to all_recipes_path do %>
         <i class="fas fa-utensils"></i>
         <% end %>
@@ -47,7 +47,7 @@
             <i class="fas fa-users"></i>
           <% end %>
         </li>
-      <li class="nav-item">
+      <li class="nav-item <%= params[:action] == 'category' ? 'active' : '' %>">
         <%= link_to choose_category_path  do %>
           <i class="fas fa-cog"></i>
         <% end %>
