--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,11 +33,13 @@
         color: $yellow;
         font-size: 20px;
         padding: 20px 0;
+        -webkit-text-stroke-width: 0px;
+        -webkit-text-stroke-color: $yellow;
       }
 
-    .active i{
-      color: white;
-      border: 1px solid $yellow;
+    .active i {
+      -webkit-text-stroke-width: 1px;
+      color: transparent;
     }
 }
 
