--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,21 +9,24 @@
 
     <ul>
       <li class="nav-item">
-        <%= link_to choose_category_path do %>
-           <% if current_user.category.nil? %>
+        <% if current_user.category.nil? %>
+
+          <%= link_to choose_category_path do %>
+            <i class="fas fa-play"></i>
+          <% end %>
+
+        <% elsif current_user.challenges.empty? %>
+          <%= link_to category_path(current_user.category) do %>
             <i class="fas fa-play"></i>
           <% end %>
 
         <% else %>
-        <% if current_user.challenges.empty? %>
-          <%= link_to category_path(current_user.category) do %>
-            <i class="fas fa-play"></i>
-          <% end %>
-        <% else %>
           <%= link_to category_path(current_user.category, anchor: current_user.challenges.last.position) do %>
             <i class="fas fa-play"></i>
           <% end %>
+
         <% end %>
+
         <% end %>
       </li>
 
