--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,13 +9,13 @@
 
     <ul>
       <li class="nav-item">
-        <% if current_user.category.nil? %>
 
           <%= link_to choose_category_path do %>
             <i class="fas fa-play"></i>
           <% end %>
 
-        <% elsif current_user.challenges.empty? %>
+        <% if current_user.challenges.empty? %>
+
           <%= link_to category_path(current_user.category) do %>
             <i class="fas fa-play"></i>
           <% end %>
@@ -24,8 +24,6 @@
           <%= link_to category_path(current_user.category, anchor: current_user.challenges.last.position) do %>
             <i class="fas fa-play"></i>
           <% end %>
-
-        <% end %>
 
         <% end %>
       </li>
