--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
 
     <ul>
 
-        <li class="nav-item <%= params[:action] == 'challenge' ? 'active' : '' %> ">
+        <li class="footer-nav-item <%= params[:action] == 'challenge' ? 'active' : '' %> ">
           <% if current_user.category.nil? %>
             <%= link_to choose_category_path do %>
               <i class="fas fa-play"></i>
