--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -74,5 +74,11 @@
         <% end %>
       </li>
 
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path %>
+        </li>
+      <% end %>
+
     </ul>
   </div>
