--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
 
     <ul class="icon-nav">
       <% if user_signed_in? %>
+        <%= link_to homepage_path %>
 
         <li class="footer-nav-item <%= params[:action] == 'challenge' ? 'active' : '' %> ">
           <% if current_user.category.nil? %>
